--- a/src/app.css
+++ b/src/app.css
@@ -39,7 +39,7 @@
     /* @apply border-border outline-ring/50; */
   }
   body {
-    @apply bg-background text-foreground overflow-hidden;
+    @apply bg-background-dark text-foreground overflow-hidden;
   }
   #app {
     margin: 0;
